add class dialogs, messages

--- a/AccessSystem/AccessSystem/AccessSystem.csproj
+++ b/AccessSystem/AccessSystem/AccessSystem.csproj
@@ -67,7 +67,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Dialogs.cs" />
     <Compile Include="ElementsFormConverter.cs" />
+    <Compile Include="Forms\Message.xaml.cs">
+      <DependentUpon>Message.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Validators.cs" />
     <Page Include="Forms\FormRequest\Actions.xaml">
       <SubType>Designer</SubType>
@@ -78,6 +82,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Forms\FormRequest\Object.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Forms\Message.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
