connect class enums, users

--- a/AccessSystem/AccessSystem/AccessSystem.csproj
+++ b/AccessSystem/AccessSystem/AccessSystem.csproj
@@ -79,6 +79,8 @@
       <DependentUpon>Message.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\Object\Base.cs" />
+    <Compile Include="Models\Object\Enums.cs" />
+    <Compile Include="Models\Object\User.cs" />
     <Compile Include="OtherMethods.cs" />
     <Compile Include="Validators.cs" />
     <Page Include="Forms\FormBase\List.xaml">
